# rt-lamp-primer-designer

./: .gitignore  DEMONSTRATION_SUMMARY.md  LICENSE  PHASE_1_5_COMPLETION_SUMMARY.md  README.md  RT_LAMP_Designer.spec  STATUS_REPORT.md  WINDOWS_BUILD.md  build_windows.bat  demo_comprehensive.py  demo_test.py  demo_test_simple.py  main_launcher.py  pytest.ini  test_gui.py  test_gui_headless.py  validate_gui_implementation.py
release_package/: INSTALLATION_GUIDE.md  README.md  README_DEPLOYMENT.md  USAGE_EXAMPLES.md  WINDOWS_DEPLOYMENT.md  pyproject.toml  requirements.txt
release_package/RT_LAMP_Designer_Folder/_internal/: libcups.so.2  libsqlite3.so.0
release_package/RT_LAMP_Designer_Folder/_internal/PySide6/: libpyside6.abi3.so.6.9
release_package/RT_LAMP_Designer_Folder/_internal/numpy-2.3.1.dist-info/: RECORD
release_package/RT_LAMP_Designer_Folder/_internal/shiboken6/: libshiboken6.abi3.so.6.9
release_package/RT_LAMP_Designer_Folder/_internal/src/rt_lamp_app/: config.py  main.py
release_package/RT_LAMP_Designer_Folder/_internal/src/rt_lamp_app/advanced/: consensus_analysis.py  msa.py
release_package/RT_LAMP_Designer_Folder/_internal/src/rt_lamp_app/design/: __init__.py  primer_design.py  utils.py
release_package/RT_LAMP_Designer_Folder/_internal/src/rt_lamp_app/gui/: __init__.py  app.py  dialogs.py  main_window.py  parameter_panel.py  results_display.py  widgets.py
src/rt_lamp_app/: __init__.py  logger.py
test_data/: sars2_n.fasta
tests/: __init__.py  conftest.py  test_integration.py  test_sequence_processing.py  test_thermodynamics.py
(+16 files in other folders)
